	* src/game.cpp, src/gui/chat.h, src/gui/chat.cpp: Fixed issue with
	determining whether chat input is focused (method no longer virtual).
	* src/gui/itemshortcutcontainer.cpp: Fixed sometimes rendering with
	the wrong font.
	* src/gui/window.h, src/gui/window.cpp: Fixed warnings about hiding
	virtual method, Window now always deletes its children (the option not
	to do so was never used anyway).

2008-04-28  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/inventorywindow.h, src/gui/itemcontainer.h,
	src/gui/inventorywindow.cpp, src/gui/scrollarea.h,
	src/gui/itemcontainer.cpp, src/gui/scrollarea.cpp: Properly fix
	problems with ItemContainer in InventoryWindow not resizing properly
	since upgrade to Guichan 0.8.0.

2008-04-28  Dennis Friis  <peavey@placid.dk>

	* src/gui/scrollarea.h, src/gui/scrollarea.cpp: Add methods to get
	width and height adjusted for any visible scrollbars.
	* src/gui/itemcontainer.cpp: Fix buildup of whitespace by using
	correct gridHeight and adding just 4px space to bottom.
	* src/gui/inventorywindow.h, src/gui/inventorywindow.cpp: Switch to
	use our extended ScrollArea and use adjusted width to proper calculate
	the grid for itemcontainer.
	* src/game.cpp: Tweak keyboard input handling a bit. This fixes using
	emoticons triggering shortcut items to be used.
	* src/game.cpp: Remove check for KMOD_NONE since this is not working
	uniformly across systems.

2008-04-27  Dennis Friis  <peavey@placid.dk>

	* src/gui/inventorywindow.cpp: Fix ItemContainer not being resized
	properly when resizing inventory window.

2008-04-26  Dennis Friis  <peavey@placid.dk>

	* src/inventory.cpp: Avoid stacking equipment other than arrows. Based on
	similar fix in inventoryhandler.
	* src/gui/trade.cpp: Text fix, z => GP.
	* src/net/playerhandler.cpp: When picking up GP from trade or quest,
	tell the user in the chat window like with items.

2008-04-24  Dennis Friis  <peavey@placid.dk>

	* src/itemshortcut.h, src/gui/itemshortcutcontainer.cpp,