@@ -28,14 +28,18 @@
 
 #include <guichan/widgets/container.hpp>
 
+/**
+ * A garbage collecting container. Childs added to this container are
+ * automatically deleted when the container is deleted.
+ */
 class GCContainer : public gcn::Container
 {
     public:
         virtual ~GCContainer();
 
-        virtual void add(gcn::Widget *w, bool delChild = true);
+        virtual void add(gcn::Widget *w);
 
-        virtual void add(gcn::Widget *w, int x, int y, bool delChild = true);
+        virtual void add(gcn::Widget *w, int x, int y);
 
         virtual void death(const gcn::Event &event);
 
